--- a/f&r/index.html
+++ b/f&r/index.html
@@ -284,14 +284,14 @@ document.getElementById("popup-3").classList.toggle("active");
   
 </body>
 <script src="https://unpkg.com/@simplewebauthn/browser/dist/bundle/index.umd.min.js"></script>
-<script src="https://cdn.socket.io/4.4.0/socket.io.min.js" integrity="sha384-1fOn6VtTq3PWwfsOrk45LnYcGosJwzMHv+Xh/Jx5303FVOXzEnw0EpLv30mtjmlj" crossorigin="anonymous"></script>
+<script src="https://passkey-5ev6.onrender.com/socket.io/socket.io.js"></script>
 
 <script src="scriptform.js"></script>
 <script>
          var eerid  = localStorage.getItem("loggeduserdetails");
          var newUserId = JSON.parse(eerid).id;
   //const { io } = require("socket.io-client");
-  const socket = io("https://passkey-5ev6.onrender.com:3001");
+  const socket = io("https://passkey-5ev6.onrender.com");
   // server-side
 
 
