--- a/f&r/index.html
+++ b/f&r/index.html
@@ -291,7 +291,7 @@ document.getElementById("popup-3").classList.toggle("active");
          var eerid  = localStorage.getItem("loggeduserdetails");
          var newUserId = JSON.parse(eerid).id;
   //const { io } = require("socket.io-client");
-  const socket = io("https://passkey-5ev6.onrender.com:10000");
+  const socket = io("http://localhost:4000");
   // server-side
 
 
