--- a/f&r/index.html
+++ b/f&r/index.html
@@ -288,7 +288,7 @@ document.getElementById("popup-3").classList.toggle("active");
 
 <script src="scriptform.js"></script>
 <script>
-         var eerid  = localStorage.getItem("loggeduserdetails");
+     /*    var eerid  = localStorage.getItem("loggeduserdetails");
          var newUserId = JSON.parse(eerid).id;
   //const { io } = require("socket.io-client");
   const socket = io("http://localhost:4000");
@@ -304,7 +304,7 @@ socket.on('connect', function() {
 
 socket.on("disconnect", () => {
   console.log(socket.id); // undefined
-});
+});*/
 </script>
 <script>
   var date = new Date();
