--- a/f&r/index.html
+++ b/f&r/index.html
@@ -394,7 +394,7 @@ alert("PassKey is already created for this Device")
            console.log("ok")
    document.getElementById("popup-1").classList.toggle("active");
    document.getElementById("aid").value = id;
-   
+   console.log(id);
    }
 
    function togglePopup(){
