--- a/f&r/index.html
+++ b/f&r/index.html
@@ -404,6 +404,7 @@ alert("PassKey is already created for this Device")
        console.log("ok")
    document.getElementById("popup-2").classList.toggle("active");
    document.getElementById("did").value = id;
+     console.log(id);
    
    }
    function togglePopup2(){
