--- a/f&r/past-forms.html
+++ b/f&r/past-forms.html
@@ -447,7 +447,7 @@ value="Set Time and Date"
     <span class="q">Change form access</span>
     <div style="display: flex;width: 100%;">
     <input type="text" placeholder="Select the peoples" style="width: 100%;" value="All M.Tech, All B.Tech">
-   <button style="margin-left: -20px;height: 20px;padding: 20px;text-align: center;" onclick="sel()"> V </button>
+   <button style="margin-left: -20px;height: 20px;padding: 20px;text-align: center;" onclick="sel()">  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M480-361q-8 0-15-2.5t-13-8.5L268-556q-11-11-11-28t11-28q11-11 28-11t28 11l156 156 156-156q11-11 28-11t28 11q11 11 11 28t-11 28L508-372q-6 6-13 8.5t-15 2.5Z"/></svg></button>
   </div>
    <div class="dropdown-content" style="margin-top: 60px;width: 100%;overflow:scroll; height:200px;" id ="uservaluess" >
     <label onclick="getSelectedValues(this)"><input type="checkbox" checked value="All M.Tech">All M.Tech</label>
