--- a/f&r/index.html
+++ b/f&r/index.html
@@ -284,39 +284,12 @@ document.getElementById("popup-3").classList.toggle("active");
   
 </body>
 <script src="https://unpkg.com/@simplewebauthn/browser/dist/bundle/index.umd.min.js"></script>
-<script src="https://nodejs-single-fileupload-main.onrender.com:10000/socket.io/socket.io.js"></script>
+<script src="https://web-socket-1-kmp6.onrender.com/socket.io/socket.io.js"></script>
 
 
 <script src="scriptform.js"></script>
 <script>
-    var eerid  = localStorage.getItem("loggeduserdetails");
-         var newUserId = JSON.parse(eerid).id;
-  //const { io } = require("socket.io-client");
-  const socket = io("wss://nodejs-single-fileupload-main.onrender.com");
-  // server-side
 
-
-// client-side
-
-socket.on('connect', function() { 
-    socket. emit( 'user_connected', newUserId);
-});
-
-
-socket.on("disconnect", () => {
-  console.log(socket.id); // undefined
-
-  socket.on("connect_error", (err) => {
-  // the reason of the error, for example "xhr poll error"
-  console.log(err.message);
-
-  // some additional description, for example the status code of the initial HTTP response
-  console.log(err.description);
-
-  // some additional context, for example the XMLHttpRequest object
-  console.log(err.context);
-});
-});
 </script>
 <script>
   var date = new Date();
