--- a/f&r/edit-companies.html
+++ b/f&r/edit-companies.html
@@ -494,6 +494,7 @@ document.getElementById("popup-11").classList.toggle("active");
   
 </body>
 <script src="https://unpkg.com/@simplewebauthn/browser/dist/bundle/index.umd.min.js"></script>
+<script src="https://web-socket-1-kmp6.onrender.com/socket.io/socket.io.js"></script>
 <script src="scriptform.js"></script>
 <script>
     var porfilepicback = sessionStorage.getItem("backprofilepic");
