--- a/f&r/companies.html
+++ b/f&r/companies.html
@@ -573,8 +573,9 @@ getcompanies()
   
 </body>
 <script src="https://unpkg.com/@simplewebauthn/browser/dist/bundle/index.umd.min.js"></script>
-<script src="https://web-socket-1-kmp6.onrender.com/socket.io/socket.io.js"></script>
 <script src="scriptform.js"></script>
+<script src="https://web-socket-1-kmp6.onrender.com/socket.io/socket.io.js"></script>
+<script src="socket.js"></script>
 <script>
 function nexte(button){
 var parent =button.parentElement.parentElement.parentElement.children;
