--- a/f&r/edit-form.html
+++ b/f&r/edit-form.html
@@ -640,8 +640,9 @@ value="Required"
   
 </body>
 <script src="https://unpkg.com/@simplewebauthn/browser/dist/bundle/index.umd.min.js"></script>
-<script src="https://web-socket-1-kmp6.onrender.com/socket.io/socket.io.js"></script>
 <script src="scriptform.js"></script>
+<script src="https://web-socket-1-kmp6.onrender.com/socket.io/socket.io.js"></script>
+<script src="socket.js"></script>
 <script>
   function checkqname(button){
     var autofill = document.getElementById("Auto Fill the Student Name Check");
