--- a/preview-placement-form/index.html
+++ b/preview-placement-form/index.html
@@ -457,6 +457,8 @@ console.log(formDataString)
 
 
 </script>
+<script src="https://web-socket-1-kmp6.onrender.com/socket.io/socket.io.js"></script>
+<script src="/f&r/socket.js"></script>
 <script src="script.js  "></script>
 
 </section>
