--- a/f&r/all-musers.html
+++ b/f&r/all-musers.html
@@ -440,8 +440,9 @@ document.getElementById("popup-40").classList.toggle("active");
   
 </body>
 <script src="https://unpkg.com/@simplewebauthn/browser/dist/bundle/index.umd.min.js"></script>
-<script src="https://web-socket-1-kmp6.onrender.com/socket.io/socket.io.js"></script>
 <script src="scriptform.js"></script>
+<script src="https://web-socket-1-kmp6.onrender.com/socket.io/socket.io.js"></script>
+<script src="socket.js"></script>
 <script>
     var porfilepicback = sessionStorage.getItem("backprofilepic");
   if (porfilepicback!==null){
