--- a/f&r/dash.html
+++ b/f&r/dash.html
@@ -387,8 +387,9 @@ document.getElementById("popup-3").classList.toggle("active");
 </body>
 <script src="https://unpkg.com/@simplewebauthn/browser/dist/bundle/index.umd.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
-<script src="https://web-socket-1-kmp6.onrender.com/socket.io/socket.io.js"></script>
 <script src="scriptform.js"></script>
+<script src="https://web-socket-1-kmp6.onrender.com/socket.io/socket.io.js"></script>
+<script src="socket.js"></script>
 <script>
 const xValues1 = ["Italy", "France"];
 const yValues1 = [55, 49];
