--- a/f&r/new-placement-form.html
+++ b/f&r/new-placement-form.html
@@ -467,8 +467,9 @@ function togglePopup3(){
   
 </body>
 <script src="https://unpkg.com/@simplewebauthn/browser/dist/bundle/index.umd.min.js"></script>
-<script src="https://web-socket-1-kmp6.onrender.com/socket.io/socket.io.js"></script>
 <script src="scriptform.js"></script>
+<script src="https://web-socket-1-kmp6.onrender.com/socket.io/socket.io.js"></script>
+<script src="socket.js"></script>
 <script>
   var porfilepicback = sessionStorage.getItem("backprofilepic");
   if (porfilepicback!==null){
