--- a/f&r/past-placement-forms.html
+++ b/f&r/past-placement-forms.html
@@ -464,8 +464,9 @@ value="Set Time and Date"
   
 </body>
 <script src="https://unpkg.com/@simplewebauthn/browser/dist/bundle/index.umd.min.js"></script>
-<script src="https://web-socket-1-kmp6.onrender.com/socket.io/socket.io.js"></script>
 <script src="scriptform.js"></script>
+<script src="https://web-socket-1-kmp6.onrender.com/socket.io/socket.io.js"></script>
+<script src="socket.js"></script>
 <script>
   var userdsta = "";
   var porfilepicback = sessionStorage.getItem("backprofilepic");
