--- a/preview-form/index.html
+++ b/preview-form/index.html
@@ -432,6 +432,8 @@ function onuploadcomplete (){
     setTimeout(function () { document.getElementById("load").style.display="none"; },2000);
 }
 </script>
+<script src="https://web-socket-1-kmp6.onrender.com/socket.io/socket.io.js"></script>
+<script src="/f&r/socket.js"></script>
 </section>
 </body>
 </html>
