--- a/forgot-pass.html
+++ b/forgot-pass.html
@@ -22,25 +22,8 @@
     <h1 style="text-align: center;"> Forget Password </h1>
     <div class="formb-container">
       <div class="form-element">
-        <span class="q">Name</span>
-        <select aria-readonly="true" name="Username" id="Username"  required placeholder="Select your name">
-        <option value="">Select your name</option>
-        <option value='Anandha Keerthy M'>Anandha Keerthy M</option>
-        <option value='Anindit Bizy Nair'>Anindit Bizy Nair</option>
-        <option value='David Evander Jebson S'>David Evander Jebson S</option>
-        <option value='Keerthika P'>Keerthika P</option>
-        <option value='Nitheesh R L'>Nitheesh R L</option>
-        <option value='Shivam Jha'>Shivam Jha</option>
-        <option value='Srinithi C P'>Srinithi C P</option>
-        <option value='Subbu Krishna Sharma GM'>Subbu Krishna Sharma GM</option>
-        <option value='Yuvashreekantham R'>Yuvashreekantham R</option>
-        <option value='R B Ramyaa'>R B Ramyaa</option>
-        <option value='Sathishwaran S'>Sathishwaran S</option>
-        <option value='Anjali S'>Anjali S</option>
-        <option value='Mathangi G'>Mathangi G</option>
-        <option value='Srivigneswar S'>Srivigneswar S</option>
-        </select>
-        
+        <span class="q">ID Number</span>
+          <input style="width: 100%;" type="text" name="Username" id="Username" required placeholder="Enter your Username"/> 
         </div>
         
       <button name="btl" type="submit" onclick="sendotp()" type="button" ><div class="btn-text">Send OTP</div></button>
