--- a/f&r/edit-form.html
+++ b/f&r/edit-form.html
@@ -1868,7 +1868,7 @@ console.log(formname+"=sheetid="+uid+"=sheetid="+"Created"+"=sheetid="+formdescr
           {
             redirect: "follow",
             method: "POST",
-            body: formname+"=sheetid="+loggedname+"=sheetid="+"Edited"+"=sheetid="+formdescrip+"=sheetid="+htmlout+"=sheetid="+htmlheads+"=sheetid="+formfolder+"=sheetid="+folderids+"=sheetid="+bulidupdetails+"=sheetid="+formnam+"=sheetid="+singleresponse+"=sheetid="+autofill,
+            body: formname+"=sheetid="+uid+"=sheetid="+"Edited"+"=sheetid="+formdescrip+"=sheetid="+htmlout+"=sheetid="+htmlheads+"=sheetid="+formfolder+"=sheetid="+folderids+"=sheetid="+bulidupdetails+"=sheetid="+formnam+"=sheetid="+singleresponse+"=sheetid="+autofill,
             headers: {
               "Content-Type": "text/plain;charset=utf-8",
             },
