--- a/f&r/past-forms.html
+++ b/f&r/past-forms.html
@@ -770,7 +770,13 @@ if (userdsta !=="done"){
        var responselink = r[k][3]
        var folderid = r[k][7]
        var livetime;
-       var lastedit="<br><br>Lastly edited by<br>"+r[k][9]
+       var lastedit;
+       if(r[k][9]!==""){
+       lastedit="<br><br>(Lastly edited by"+r[k][9]+")";
+       }
+       else{
+        lastedit="";
+       }
        var fdta =r[k][0]+"/ll/"+r[k][8];
        if (r[k][8]==""&&formstatus=="Live"){
        var acpeo = "All M.Tech, All B.Tech";
