--- a/set-pass.html
+++ b/set-pass.html
@@ -103,7 +103,7 @@ setTimeout(function () {
   document.getElementById("load").style.display="none";
   var setname = sessionStorage.getItem("setname");
   if (setname !== null){
-  l//ocalStorage.setItem("loggedname", setname);
+  //ocalStorage.setItem("loggedname", setname);
   }
   sessionStorage.removeItem("setname");
   window.location="index.html"
