--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -103,6 +103,7 @@ umembers.forEach((h,inf) =>{
   }
   allotoption += option;
 })
+console.log(inputs[5].children[1].value,udata[5],allotnamee)
 inputs[5].children[1].value = allotnamee;
 document.getElementById("Alloted Member").innerHTML =  allotoption;
 if (udata[3].includes("M.Tech")){
