--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -107,7 +107,7 @@ umembers.forEach((h,inf) =>{
 console.log(udata[5])
 console.log(allotnamee)
 inputs[5].children[1].value = allotnamee;
-console.log(inputs[5].children[1].value)
+console.log(inputs[5].children[1])
 document.getElementById("Alloted Member").innerHTML =  allotoption;
 if (udata[3].includes("M.Tech")){
     document.getElementById("popup-inner").querySelectorAll("div")[6].style.display="none"
