--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -99,14 +99,14 @@ var allotnamee="";
 umembers.forEach((h,inf) =>{
   var option = `<option value="`+umembersids[inf][0]+`">`+h[0]+`</option>`;
   if (h[0]==udata[5]){
-    allotnamee = umembersids[inf][0];
+    allotnamee = inf;
   }
   allotoption += option;
 })
 
 console.log(udata[5])
 console.log(allotnamee)
-inputs[5].children[1].value = allotnamee;
+inputs[5].children[1].selectedIndex = allotnamee;
 console.log(inputs[5].children[1])
 document.getElementById("Alloted Member").innerHTML =  allotoption;
 if (udata[3].includes("M.Tech")){
